--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             <li>• You'll be assigned Player 1, Player 2, etc.</li>
             <li>• One AI will join your game as a player</li>
             <li>• Chat naturally - no topics, just conversation</li>
-            <li>• After 5 minutes, vote who you think is the AI</li>
+            <li>• At the end of the game, vote who you think is the AI</li>
             <li>• Humans win if they correctly identify the AI</li>
           </ul>
         </div>
