--- a/index.html
+++ b/index.html
@@ -16,11 +16,33 @@
       font-family: 'Space Mono', monospace;
     }
 
+    /* Custom Scrollbar */
+    ::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: rgba(15, 23, 42, 0.5);
+      border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: rgba(139, 92, 246, 0.5);
+      border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: rgba(139, 92, 246, 0.7);
+    }
+
     body {
       background: linear-gradient(135deg, #0f172a 0%, #1e293b 50%, #3b0764 100%);
       color: white;
-      min-height: 100vh;
-      overflow-x: hidden;
+      height: 100vh;
+      overflow: hidden;
+      position: fixed;
+      width: 100%;
     }
 
     .title-font {
@@ -43,7 +65,8 @@
         linear-gradient(rgba(139, 92, 246, 0.1) 1px, transparent 1px),
         linear-gradient(90deg, rgba(139, 92, 246, 0.1) 1px, transparent 1px);
       background-size: 50px 50px;
-      min-height: 100vh;
+      height: 100vh;
+      overflow-y: auto;
       padding: 1rem;
     }
 
