fixed page broken

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
       background: rgba(139, 92, 246, 0.7);
     }
 
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+
     body {
       background: linear-gradient(135deg, #0f172a 0%, #1e293b 50%, #3b0764 100%);
       color: white;
-      height: 100vh;
-      overflow: hidden;
-      position: fixed;
-      width: 100%;
     }
 
     .title-font {
