--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         linear-gradient(90deg, rgba(139, 92, 246, 0.1) 1px, transparent 1px);
       background-size: 50px 50px;
       height: 100vh;
-      overflow-y: auto;
+      overflow: hidden;
       padding: 1rem;
     }
 
@@ -550,8 +550,8 @@
     }
 
     .games-browser {
-      margin-top: 2rem;
-      max-height: 400px;
+      margin-top: 1rem;
+      max-height: 300px;
       overflow-y: auto;
     }
 
