--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
     .container {
       max-width: 100%;
+      height: 100%;
       margin: 0 auto;
       padding: 0 1rem;
     }
@@ -99,6 +100,15 @@
     .header {
       text-align: center;
       margin-bottom: 1.5rem;
+    }
+
+    #game-screen, #spectator-screen {
+      height: 100%;
+    }
+
+    #game-screen:not(.hidden), #spectator-screen:not(.hidden) {
+      display: flex;
+      flex-direction: column;
     }
 
     .header h1 {
@@ -221,14 +231,17 @@
       display: grid;
       grid-template-columns: 280px 1fr;
       gap: 1rem;
-      height: calc(100vh - 2rem);
+      flex: 1;
+      overflow: hidden;
+      min-height: 0;
     }
 
     .sidebar {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      height: 100%;
+      overflow: hidden;
+      min-height: 0;
     }
 
     .timer-card {
@@ -283,7 +296,8 @@
     .chat-container {
       display: flex;
       flex-direction: column;
-      height: 100%;
+      overflow: hidden;
+      min-height: 0;
     }
 
     .chat-header {
@@ -515,7 +529,7 @@
     }
 
     .hidden {
-      display: none;
+      display: none !important;
     }
 
     .player-count-badge {
